--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,11 @@
 <title>Incremental Trade</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-  body{font-family:system-ui,Arial;background:#111;color:#eee;margin:0;padding:1rem;display:flex;flex-direction:column;align-items:center}
-  button{padding:.6rem 1.2rem;font-size:1.2rem;margin:.3rem;border:none;border-radius:6px;background:#0af;color:#fff;cursor:pointer;transition:all 0.2s}
+  body{font-family:system-ui,Arial;background:#111;color:#eee;margin:0;padding:1rem;display:flex;flex-direction:column;align-items:center;touch-action:manipulation;user-select:none;-webkit-user-select:none;-webkit-tap-highlight-color:transparent}
+  button{padding:.6rem 1.2rem;font-size:1.2rem;margin:.3rem;border:none;border-radius:6px;background:#0af;color:#fff;cursor:pointer;transition:all 0.2s;touch-action:manipulation;-webkit-tap-highlight-color:transparent}
   button:hover:not(:disabled){background:#0cf;transform:scale(1.05)}
   button:disabled{background:#555;cursor:not-allowed;opacity:0.5}
+  button:active{transform:scale(0.95)}
   .row{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center;width:100%;max-width:1200px}
   .card{background:#222;padding:1rem;border-radius:8px;flex:1 1 220px;margin:.5rem;box-shadow:0 4px 6px rgba(0,0,0,0.3)}
   .card h3{margin-top:0;color:#0af;border-bottom:2px solid #0af;padding-bottom:.5rem}
@@ -25,7 +26,7 @@
   .achievement{background:#2a2a00;padding:.5rem;margin:.3rem 0;border-left:4px solid #ffa;border-radius:4px;font-size:.9rem}
   .achievement.unlocked{background:#002a00;border-left-color:#0f0}
   .stat-line{display:flex;justify-content:space-between;padding:.3rem 0;border-bottom:1px solid #333}
-  #clickBtn{font-size:1.5rem;padding:1rem 2rem;background:linear-gradient(135deg, #0af 0%, #08d 100%);margin:1rem}
+  #clickBtn{font-size:1.5rem;padding:1rem 2rem;background:linear-gradient(135deg, #0af 0%, #08d 100%);margin:1rem;touch-action:manipulation;user-select:none;-webkit-user-select:none}
   .price{color:#ffa}
   .count{color:#0f0;font-weight:bold}
   .progress-bar{background:#333;height:20px;border-radius:10px;overflow:hidden;margin:.5rem 0}
@@ -34,6 +35,7 @@
   .locked{opacity:0.5;filter:grayscale(1)}
   .new-content{animation:glow 1s infinite}
   @keyframes glow{0%,100%{box-shadow:0 0 5px #0af}50%{box-shadow:0 0 20px #0af}}
+  *{-webkit-touch-callout:none;-webkit-text-size-adjust:none}
 </style>
 </head>
 <body>
